src/test/StaticFail/StaticFail.expected
error: StaticFail.panda:7:11: cannot modify static field 'x'
1 error
