src/test/StaticFail/StaticFail.panda
class StaticFail {
    @static
    var x:Int

    constructor() {
        x := 1239
        x := 5920
    }
    
    @class
    method main() {
        var static := new StaticFail()
        Console.writeLine(static.x)
    }
}